# ccar-websockets

./: Features.md  Import.hs  Issues.md  LICENSE  Login.md  Main.hs  README.md  Requirements.md  Setup.hs  Tasks.md  TestCases.md  UserInteractions.md  cabal.sandbox.config  ccar-websockets.cabal  passed_tests.txt  small_portfolio_tests.txt  voting.md
CCAR/Command/: ApplicationError.hs  Command.hs  ErrorCommand.hs
CCAR/Data/: TradierApi.hs
CCAR/Entitlements/: Entitlements.hs  GmailAuthentication.hs  TradierApi.hs
CCAR/Main/: DBOperations.hs  DBUtils.hs  Driver.hs  EnumeratedTypes.hs  GroupCommunication.hs  UserJoined.hs  Util.hs
CCAR/Model/: CCAR.hs  CcarDataTypes.hs  Company.hs  Country.hs  Login.hs  Maturity.hs  Person.hs  Portfolio.hs  PortfolioSymbol.hs  Project.hs  ProjectWorkbench.hs  Survey.hs  UserOperations.hs  UserTermsAndConditions.hs
CCAR/Parser/: CCARParsec.hs  CSVParser.hs
CCAR/Tests/: TestCSV.hs  TestCases.hs  TestRegex.hs  TestRegex.hsc
client/: MBooks.hx  Test.hx  compile.hxml  test.html  test.js
client-hx/: Company.hx  MBooks.hx  MBooks.old  MBooks_im.hx  UI issues.md  build.hxml  compile.hxml  demo.r  index.html  mBooks_im.html  mbooks.css  mbooks.html  mbooks.js  mbooks_im.js  protocol.txt  style.css  ws_test.html
client-hx/src/js/: D3.hx
client-hx/src/model/: CCAR.hx  Command.hx  CommandType.hx  CommandUO.hx  Company.hx  CompanyEntitlement.hx  Contact.hx  Entitlement.hx  Login.hx  LoginStatus.hx  MarketDataUpdate.hx  ParseCCARText.hx  Person.hx  Portfolio.hx  PortfolioSymbol.hx  Project.hx  ProjectWorkbench.hx  UserOperation.hx
client-hx/src/util/: Config.hx  Util.hx
client-hx/src/view/: CCAR.hx  Company.hx  CompanyEntitlement.hx  Entitlement.hx  ListManager.hx  Person.hx  Portfolio.hx  PortfolioSymbol.hx
client-mono/: hello.cs
client-wxpython/: Notes.md
client/src/model/: Contact.hx
config/: csr.sh  dev.env  nginx.conf  nginx_ec2.conf  nginx_ssl.conf
data/: Country.csv  ibm_hist.csv  nasdaq_1.txt  nasdaq_10.txt  nasdaq_listed.txt  other_listed.txt  spill_database.csv  test_country.csv
julia_scripts/: binomial.jl  nc  simple_server.jl
pbdr_test_scripts/: indicator.json  indicator_test.r  normality_test.r  test_script_1.r
ssl_self_config/: configupdate.tgz
test_portfolios/: eq.csv  portfolio.txt  small_portfolio.txt
webserver/static/: mbooks.html  mbooks.js
