-- documentation, see http://haskell.org/cabal/users-guide/

-- The name of the package.
name:                ccar-websockets

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             BSD3

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Dinkar Ganti

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          dinkar.ganti@gmail.com

-- A copyright notice.
-- copyright:           

category:            Network

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable ccar-websockets
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:     base                             >= 4.5 && < 5
                     -- Just for CPP macro
                     , wai-websockets                 >= 3.0.0.5 && < 3.1
                     , yesod-websockets               >= 0.2.0 && < 0.3
                     , yesod-core                     >= 1.4.4 && < 1.5
                     , yesod-static                   >= 1.4.0.3 && < 1.5
                     , text                           >= 0.11.3.1 && < 1.12
                     , stm-lifted                     >= 0.1.0.0 && < 0.2
                     , conduit                        >= 1.2.4 && < 1.3
                     , conduit-combinators            >= 0.3.0.6 && < 0.4
                     , time                           >= 1.4.0.1 && < 1.5
                     , transformers                   >= 0.3.0.0 && < 0.4
                     , filepath                       >= 1.3.0.1
                     , persistent                     >= 2.1 && < 2.2
                     , persistent-sqlite              >=  2.1 && < 2.2
                     , persistent-template               >= 2.1 && < 2.2
                     , aeson                          >= 0.7.0.4 && < 0.8
                     , unordered-containers           >= 0.2.3.0 && < 0.3
                     , esqueleto                      >= 2.1.2.1 && < 2.2
                     , persistent-postgresql          >= 2.1.1 && < 2.2
                     , monad-logger                   >= 0.3.8 && < 0.4
                     , bytestring                     >= 0.10.0.2 && < 0.11
                     , parsec                        >= 3.1.3 && < 3.2
                     , websockets                    >= 0.9.3.1 && < 0.10
                     , containers                    >= 0.5.0.0 && < 0.6
                     , async                         >= 2.0.1.6 && < 2.1
                     , monad-control                 >= 0.3.2.2 && < 0.4
                     , mtl                           >= 2.1.2 && < 2.2
                     , uuid                          >= 1.3.10 && < 1.4
                     , old-locale                    >= 1.0.0.5 && < 1.1
                     , process                       >= 1.1.0.2 && < 1.2
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010
  default-extensions: OverloadedStrings CPP DeriveDataTypeable
                        TypeFamilies TemplateHaskell TypeSynonymInstances FlexibleInstances
                        DataKinds DeriveGeneric NoMonomorphismRestriction
                        OverlappingInstances
                        MultiParamTypeClasses
                        GeneralizedNewtypeDeriving
                        GADTs
                        QuasiQuotes
                        RecordWildCards
                        NamedFieldPuns

  --ghc-options: -ddump-splices
  ghc-options:    
